# hcefhoook

./: .gitignore  CHANGELOG_PR.md  DOBBY_INTEGRATION.md  FINAL_WORK_SUMMARY.md  MIGRATION_GUIDE.md  OBSERVE_MODE_ARCHITECTURE.md  README.md  SECURITY_SUMMARY.md  THIRD_PARTY_LICENSES.md  ULTRATHINK_PROTOCOL_2.md  settings.gradle
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  devcontainer-image.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/assets/frida/: observe_mode_bypass.js
app/src/main/cpp/: CMakeLists.txt  dobby_hooks.cpp  dobby_hooks_old.cpp.bak  dobby_impl.cpp  dobby_impl.cpp.backup  dobby_stub.cpp  native_hook.cpp  native_hook.cpp.unused  native_utils.cpp
app/src/main/cpp/dobby/include/: dobby.h
app/src/main/java/app/aoki/yuki/hcefhook/core/: Constants.java  LogReceiver.java  SensfResBuilder.java
app/src/main/java/app/aoki/yuki/hcefhook/ipc/: HookIpcProvider.java  IpcClient.java
app/src/main/java/app/aoki/yuki/hcefhook/nativehook/: DobbyHooks.java  NativeHook.java.unused  NativeUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: hcef_observe_mode_service.xml
docs/: 16_ROUND_VERIFICATION.md  ARCHITECTURE.md  DOBBY_BUILD_ATTEMPT.md  E2E_INTEGRATION_STATUS.md  HANDOFF_DOCUMENT.md  HOOK_TARGETS.md  INTEGRATION_TASK.md  PROTOCOL_2_COMPLETE.md  REMAINING_WORK.md  SECURITY_SUMMARY.md  ST21NFC_SYMBOLS.md  SYMBOL_ANALYSIS.md  TECHNICAL_ANALYSIS.md  ULTRATHINK_RITUAL_LOG.md  USAGE.md  VERIFICATION_8ROUND.md  observe_mode_aosp_research.md
kernelsu_module/: README.md  customize.sh  module.prop  post-fs-data.sh  service.sh
ref_aosp/: AOSP_NFC_ANALYSIS.md
ref_aosp/android15/packages_apps_Nfc/nci/jni/: NativeNfcManager.cpp
ref_aosp/android15/system_nfc/include/: nci_defs.h
ref_aosp/android15/system_nfc/nfa/dm/: nfa_dm_act.cc  nfa_dm_api.cc  nfa_dm_discover.cc  nfa_dm_main.cc
ref_aosp/android15/system_nfc/nfa/include/: nfa_dm_int.h
ref_aosp/android15/system_nfc/nfc/: nfc_main.cc
ref_aosp/packages_apps_Nfc/: DeviceHost.java  EnabledNfcFServices.java  HostEmulationManager.java  NativeNfcManager.cpp  NfcProprietaryCaps.java  NfcService.java  NfcShellCommand.java  RegisteredNfcFServicesCache.java  RegisteredT3tIdentifiersCache.java  RoutingManager.cpp  RoutingManager.h
ref_aosp/packages_apps_nfc/src/: NfcObserveMode.java
ref_aosp/system_nfc/src/nfc/include/: nci_defs.h  nfa_dm_int.h  nfc_hal_api.h
ref_aosp/system_nfc/src/nfc/nci/: nci_hmsgs.cc  nci_hrcv.cc
ref_aosp/system_nfc/src/nfc/nfa/: nfa_dm_discover.cc  nfa_t3t.cc
scripts/: frida_native_hook.js  verify_pr.sh
(+12 files in other folders)
